[project]
name = "boulderbar-capacity-tracker"
version = "0.1.0"
description = "boulderbar capacity tracker"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "gunicorn>=22.0.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
